apm-server/ingress-apm-server/ingress-apm-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-server-ingress
  namespace: elastic-stack
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: dns.apm-server
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: apm-server-apm-http
            port:
              number: 8200
